conatct baranch:info add in about page in span tag

--- a/about.html
+++ b/about.html
@@ -7,5 +7,6 @@
     </head>
     <body>
         <h1>Hello i am form about dosto</h1>
+        <span>hello this is  for conatct beranch and it is contact branch commit</span>
     </body>
 </html>
