--- a/about.html
+++ b/about.html
@@ -7,5 +7,9 @@
     </head>
     <body>
         <h1>Hello i am form about dosto</h1>
+        <p>
+            this was add after the crete cntact then one commmite perform in master and then i commite here in about
+            branch
+        </p>
     </body>
 </html>
