add to the code in about page and delete barnch

--- a/about.html
+++ b/about.html
@@ -13,5 +13,6 @@
             branch
         </p>
         <p>thsi is code after commite about page in delete branch</p>
+        <p>Hello i am from delete barnch</p>
     </body>
 </html>
