--- a/about.html
+++ b/about.html
@@ -7,5 +7,6 @@
     </head>
     <body>
         <h1>Hello i am form about dosto</h1>
+        <p>thsi is code after commite about page in delete branch</p>
     </body>
 </html>
