commite in about after chnage in about branch

--- a/about.html
+++ b/about.html
@@ -12,5 +12,6 @@
             this was add after the crete cntact then one commmite perform in master and then i commite here in about
             branch
         </p>
+        <p>thsi is code after commite about page in delete branch</p>
     </body>
 </html>
