add code in indexjs and commite form about

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
     </head>
     <body>
         <h1>Hello, Meet Bhayani</h1>
+        <p>this i=code i write form about barnch and commite in it.</p>
     </body>
 </html>
