--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
     <body>
         <h1>Hello, Meet Bhayani</h1>
         <p>this i=code i write form about barnch and commite in it.</p>
+        <p>hii ia am from masteabout and this is make conflict when i merge code</p>
     </body>
 </html>
