--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
         <p>this i=code i write form about barnch and commite in it.</p>
         <p>hii ia am from masteabout and this is make conflict when i merge code</p>
         <div>Hello</div>
+        <span>hello</span>
     </body>
 </html>
